9 April 2018: Wouter
	- Fix that flush_zone sets prefetch ttl expired, so that with
	  serve-expired enabled it'll start prefetching those entries.

5 April 2018: Wouter
	- Combine write of tcp length and tcp query for dns over tls.
	- nitpick fixes in example.conf.
	- Fix above stub queries for type NS and useless delegation point.
	- Fix unbound-control over pipe with openssl 1.1.1, the TLSv1.3
	  tls_choose_sigalg routine does not allow the ciphers for the pipe,
	  so use TLSv1.2.
	- ED448 support.

3 April 2018: Wouter
	- Fix #4043: make test fails due to v6 presentation issue in macOS.
	- Fix unable to resolve after new WLAN connection, due to auth-zone
	  failing with a forwarder set.  Now, auth-zone is only used for
	  answers (not referrals) when a forwarder is set.

29 March 2018: Ralph
	- Check "result" in dup_all(), by Florian Obser.

23 March 2018: Ralph
	- Fix unbound-control get_option aggressive-nsec

21 March 2018: Ralph
	- Do not use cached NSEC records to generate negative answers for
	  domains under DNSSEC Negative Trust Anchors.

19 March 2018: Wouter
	- iana port update.

16 March 2018: Wouter
	- corrected a minor typo in the changelog.
	- move htobe64/be64toh portability code to cachedb.c.

15 March 2018: Wouter
	- Add --with-libhiredis, unbound support for a new cachedb backend
	  that uses a Redis server as the storage.  This implementation
	  depends on the hiredis client library (https://redislabs.com/lp/hiredis/).
	  And unbound should be built with both --enable-cachedb and
	  --with-libhiredis[=PATH] (where $PATH/include/hiredis/hiredis.h
	  should exist).  Patch from Jinmei Tatuya (Infoblox).
	- Fix #3817: core dump happens in libunbound delete, when queued
	  servfail hits deleted message queue.
	- Create additional tls service interfaces by opening them on other
	  portnumbers and listing the portnumbers as additional-tls-port: nr.

13 March 2018: Wouter
	- Fix typo in documentation.